@@ -1,11 +1,9 @@
 ---
 name: Options
-version: 1.5
+version: 1.5.1
 author:
   - 'Phil Christensen, E<lt>phil@bubblehouse.orgE<gt>'
-abstract: |-
-  A perl module to provide better support for command-line option
-  			parsing, hopefully better than GetOpts.
+abstract: Yet another Perl module to provide support for command-line option parsing and usage generation.
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
@@ -15,16 +13,15 @@ recommends:
   Test::More: 0
   Test::Pod: '>= 1.0'
   Test::Pod::Coverage: 0
-  Test::Trap: 0
   Test::Unit: '>= 0.25'
   perl: 5.8
 provides:
   Options:
     file: lib/Options.pm
-    version: 1.5
+    version: 1.5.1
   TestOptions:
     file: lib/TestOptions.pm
-generated_by: Module::Build version 0.2808
+generated_by: Module::Build version 0.2805
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
